--- a/app/src/main/res/layout/activity_sort.xml
+++ b/app/src/main/res/layout/activity_sort.xml
@@ -5,7 +5,7 @@
     android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".feature_talk.adapter.SortActivity">
+    tools:context=".feature_talk.SortActivity">
 
     <TextView
         android:id="@+id/dateTextView"
