--- a/app/src/main/res/layout/fragment_ariticle.xml
+++ b/app/src/main/res/layout/fragment_ariticle.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AriticleFragment">
+    tools:context=".feature_ariticle.AriticleFragment">
 
     <TextView
         android:layout_width="match_parent"
