20191025 push for code review

--- a/app/src/main/res/layout/fragment_talk.xml
+++ b/app/src/main/res/layout/fragment_talk.xml
@@ -75,5 +75,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleContraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/titleContraintLayout"
+        tools:listitem="@layout/viewholder_message_item"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
