--- a/app/src/main/res/layout/fragment_search_setting.xml
+++ b/app/src/main/res/layout/fragment_search_setting.xml
@@ -80,7 +80,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recentSearchRecordRecycleView"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="0dp"
